--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.0.5
   fluttertoast: ^8.0.8
   intl: ^0.17.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
